kubernetes/kustomize/zuul/overlays/prod/zookeeper-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: zookeeper
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: csi-disk-retain
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
