kubernetes/kustomize/zuul/overlays/prod/zuul-executor-resources-patch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zuul-executor
spec:
  template:
    spec:
      containers:
        - name: zuul
          resources:
            limits:
              memory: "4G"
              cpu: "2"
            requests:
              cpu: "100m"
              memory: "4G"
