kubernetes/kustomize/zuul/overlays/prod/zuul-executor-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zuul-executor
spec:
  replicas: 2
  volumeClaimTemplates:
    - metadata:
        name: zuul-var
      spec:
        storageClassName: csi-disk-topology
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Gi
